# bandsoft_tools

./: CMakeLists.txt  band_geometry_ccdb_barxyz.txt  band_geometry_offset_ccdb.txt  band_statustable_ccdb_default.txt  band_statustable_ccdb_fall19.txt  band_statustable_ccdb_spring19.txt  create_bandgeofile.py  create_statustable.py
DCfiducial/: CMakeLists.txt  DC_fiducial.cpp
bandhit/: CMakeLists.txt  LinkDef.h  bandhit.cpp  bandhit_rdict.pcm
bandreco/: bandreco.cpp
banklib/: BBand.cpp  BCalorimeter.cpp  BConfig.cpp  BEvent.cpp  BParticle.cpp  BScaler.cpp  BScintillator.cpp  CMakeLists.txt
calibration/: CMakeLists.txt
calibration/gainfit/: CMakeLists.txt  gainfit.cpp
calibration/glob_time/: CMakeLists.txt  initial_bar.cpp  layer_class.cpp  paddle.cpp  paddle_class.cpp  test_class.cpp
calibration/lr_offset/: CMakeLists.txt  lr_offset.cpp  lr_offset_class.cpp  plot_effvel.py  test_offset.cpp
calibration/timewalk/: CMakeLists.txt  combopars.py  test_timewalk.cpp  test_timewalk_v1.cpp  test_timewalk_v2.cpp  test_timewalk_v3.cpp  timewalk.cpp  timewalk_class.cpp  timewalk_class_v1.cpp  timewalk_class_v2.cpp  timewalk_class_v3.cpp  timewalk_class_v4.cpp
clas12fiducial/: CMakeLists.txt  clas12fiducial.cpp
clas12pid/: CMakeLists.txt  e_pid.cpp  e_pid.cpp~
clashit/: CMakeLists.txt  LinkDef.h  clashit.cpp
cmake_modules/: FindLZ4.cmake  FindROOT.cmake
gemc_debug/: CMakeLists.txt  ep_gaps.cpp  ep_resolutions.cpp  hipo_check.cpp  neutron_resolutions.cpp
genpart/: CMakeLists.txt  LinkDef.h  genpart.cpp
hipolib/: CMakeLists.txt
include/: .readhipo_helper.h.swp  .taghit.h.swp  BBand.h  BCalorimeter.h  BConfig.h  BEvent.h  BParticle.h  BScaler.h  BScintillator.h  DC_fiducial.h  EffVelocities_S6200.txt  EffVelocities_S6291.txt  FADC_pass1v0_initbar.txt  FADC_pass1v0_initrun.txt  HipoLinkDef.h  LER_FADC_shifts.txt  LER_FADC_shifts_02092021.txt  LER_TDC_shifts.txt  LER_TDC_shifts_02092021.txt  LrOffsets_S6200.txt  LrOffsets_S6291.txt  band-bar-edep-mc.txt  band-bar-geometry.txt  bandhit.h  bandreco.h  bar_list.txt  clas12fiducial.h  clashit.h  constants.h  e_pid.h  genpart.h  particles.h  readhipo_helper.h  taghit.h
include/RCDB/: StringUtils.h
include/calibrations/fall2019/: edep_calibration.txt  global_offsets_fadc.txt  global_offsets_fadc_ler.txt  global_offsets_fadc_rgm_D2.1.txt  global_offsets_tdc.txt  global_offsets_tdc_ler.txt  global_offsets_tdc_rgm_D2.1.txt  layer_offsets.txt  lr_offsets.txt  paddle_offsets.txt  status_list.txt  time_walk_amp_L.txt  time_walk_amp_R.txt
include/calibrations/simulation/: paddle_offsets.txt
include/calibrations/spring2019/: edep_calibration.txt  global_offsets_fadc.txt  global_offsets_fadc_006290_10pt6.txt  global_offsets_fadc_006399_10pt6.txt  global_offsets_tdc.txt  global_offsets_tdc_006290_10pt6.txt  global_offsets_tdc_006399_10pt6.txt  layer_offsets.txt  layer_offsets_006290_10pt6.txt  lr_offsets.txt  lr_offsets_006290_10pt6.txt  paddle_offsets.txt  paddle_offsets_006290_10pt6.txt  status_list.txt  time_walk_amp_L.txt  time_walk_amp_R.txt
include/old-shifts/: FADC_pass1v0_initbar_predLfix.txt  FADC_pass1v0_initrun_predLfix.txt  TDC_pass1v0_initbar.txt
nefficiency/: CMakeLists.txt  check_nalgo.cpp  epplus.cpp  n_skim.cpp  nefficiency.cpp  nspectrum.cpp  resolution.cpp
neutronfunctions/: pointsToBand.C
particles/: .particles.cpp.swp  CMakeLists.txt  LinkDef.h  particles.cpp
runlists/: bad_runs_10-2.txt  bad_runs_10-4.txt  bad_runs_10-6.txt  bad_runs_LER.txt  emptytarget_runs_10-2.txt  emptytarget_runs_10-6.txt  good_runs_10-2-final.txt  good_runs_10-2.txt  good_runs_10-4.txt  good_runs_10-6.txt  good_runs_LER.txt  lowlumi_runlist_10-4.txt  lowlumin_runs_10-2.txt  lowlumin_runs_10-6.txt
skimmers/: .neutrons.cpp.swp  .readhipo_helper.cpp.swp  CMakeLists.txt  DC_fid_cuts.cpp  DC_fid_test.cpp  EC_cuts.cpp  SF_cuts_fit.cpp  bandhit.cpp  ecalneutrals.cpp  electrons.cpp  get_Q_Tag0.cpp  ncalibration.cpp  ncalibration_newbandclass.cpp  neutrons.cpp  quasielastic.cpp  readhipo_helper.cpp  tagged_dis.cpp  tagged_dis_acceptance.cpp  tagged_dis_newclass.cpp  tagged_qe.cpp
taghit/: CMakeLists.txt  LinkDef.h  taghit.cpp
testpid/: CMakeLists.txt  PI_cuts_fit.cpp  SF_cuts_fit.cpp  cut_check.cpp
