# CMakeLists for tools
project(tools)

# Set up
cmake_minimum_required (VERSION 3.0)
set(CMAKE_CXX_FLAGS "-std=c++11")
set(CMAKE_EXE_LINKER_FLAGS "-L/usr/lib64/openssl-1.0")
set(CMAKE_SHARED_LINKER_FLAGS "-L/usr/lib64/openssl-1.0")
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules")
find_package(ROOT REQUIRED)
find_package(LZ4 REQUIRED)
add_definitions(-D__LZ4__)

SET(CMAKE_SKIP_BUILD_RPATH  FALSE)
SET(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
SET(CMAKE_INSTALL_RPATH "${CMAKE_SOURCE_DIR}/lib")
SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
LIST(FIND CMAKE_PLATFORM_IMPLICIT_LINK_DIRECTORIES "${CMAKE_SOURCE_DIR}/lib" isSystemDir)
IF("${isSystemDir}" STREQUAL "-1")
   SET(CMAKE_INSTALL_RPATH "${CMAKE_SOURCE_DIR}/lib")
ENDIF("${isSystemDir}" STREQUAL "-1")

# Add directories
add_subdirectory(banklib)
add_subdirectory(hipolib)
add_subdirectory(bandhit)
add_subdirectory(clashit)
add_subdirectory(clas12fiducial)
add_subdirectory(clas12pid)
add_subdirectory(testpid)
add_subdirectory(taghit)
add_subdirectory(genpart)
add_subdirectory(skimmers)
add_subdirectory(DCfiducial)
add_subdirectory(calibration)
